--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -11,6 +11,8 @@ header img {
 }
 
 header {
+	position: fixed;
+	width: 100%;
 	background-color:black;
 }
 
@@ -30,11 +32,74 @@ header div {
 }
 
 .FrontPage {
+	padding-top: 5rem;
 	height: 25rem;
 	width: auto;
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-image: url(../images/moto.jpeg)
+}
+
+.FrontPage {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.FrontPage h1 {
+
+
+	padding-top: 0.25rem;
+	font-weight: bold;
+	font-size: 2rem;
+	color: white;
+}
+
+.banner h4 {
+	text-decoration: underline;
+	padding-bottom: 0.75rem;
+	font-size: 1rem;
+	font-weight: bold;
+	color: white;
+}
+
+.banner {
+	padding: 3rem 4rem;
+	background-color: black;
+	width: 20rem;
+}
+
+.menu {
+
+	background-color: firebrick;
+	padding-top: 0.75rem;
+	padding-bottom:0.75rem;
+}
+
+.menuItems {
+	color: white;
+	display: flex;
+	justify-content: space-between;
+}
+
+.agentPhoto img {
+	height: 9rem;
+	border:4pt solid black;
+	margin: 2rem 2rem;
+}
+
+
+
+.saleItems {
+	display: flex;
+	justify-content: space-between;
+}
+
+.agentPhotoGlasses img {
+	height: 7rem;
+	margin: 2rem 2rem;
+	padding-top: 2rem;
+	border: 4pt solid black;	
 }
 
