--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,105 +1,118 @@
 body {
-
-	font-size:18px;
-	font-family:Helvetica;
+  font-size: 18px;
+  font-family: Helvetica;
 }
 
 header img {
-	height: 1.5rem;
-	padding-right: 1rem;
-	padding-left: 0.5rem;
+  height: 1.5rem;
+  padding-right: 1rem;
+  padding-left: 0.5rem;
 }
 
 header {
-	position: fixed;
-	width: 100%;
-	background-color:black;
+  position: fixed;
+  width: 100%;
+  background-color: black;
 }
 
 header div {
-	display: flex;
-	align-items: center;
-	background-color: black;
-	color: white;
-	padding-top: 0.66rem;
- 	padding-bottom: 0.66rem;
-
+  display: flex;
+  align-items: center;
+  background-color: black;
+  color: white;
+  padding-top: 0.66rem;
+  padding-bottom: 0.66rem;
 }
 
 .container-size {
-	width: 960px;
-	margin: 0 auto;
+  width: 960px;
+  margin: 0 auto;
 }
 
 .FrontPage {
-	padding-top: 5rem;
-	height: 25rem;
-	width: auto;
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-image: url(../images/moto.jpeg)
+  padding-top: 5rem;
+  height: 25rem;
+  width: auto;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(../images/moto.jpeg);
 }
 
 .FrontPage {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .FrontPage h1 {
-
-
-	padding-top: 0.25rem;
-	font-weight: bold;
-	font-size: 2rem;
-	color: white;
+  padding-top: 0.25rem;
+  font-weight: bold;
+  font-size: 2rem;
+  color: white;
 }
 
 .banner h4 {
-	text-decoration: underline;
-	padding-bottom: 0.75rem;
-	font-size: 1rem;
-	font-weight: bold;
-	color: white;
+  text-decoration: underline;
+  padding-bottom: 0.75rem;
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
 }
 
 .banner {
-	padding: 3rem 4rem;
-	background-color: black;
-	width: 20rem;
+  padding: 3rem 4rem;
+  background-color: black;
+  width: 20rem;
 }
 
 .menu {
-
-	background-color: firebrick;
-	padding-top: 0.75rem;
-	padding-bottom:0.75rem;
+  background-color: firebrick;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .menuItems {
-	color: white;
-	display: flex;
-	justify-content: space-between;
+  color: white;
+  display: flex;
+  justify-content: space-between;
 }
 
 .agentPhoto img {
-	height: 9rem;
-	border:4pt solid black;
-	margin: 2rem 2rem;
+  padding: 2rem 3rem;
+  height: 9rem;
+  border: 4pt solid black;
+  margin: 2rem 2rem;
 }
 
-
-
-.saleItems {
-	display: flex;
-	justify-content: space-between;
+.product-image img {
+  padding: 2rem;
+  max-width: 11rem;
+  max-height: 10rem;
+  margin: 0 auto;
 }
 
-.agentPhotoGlasses img {
-	height: 7rem;
-	margin: 2rem 2rem;
-	padding-top: 2rem;
-	border: 4pt solid black;	
+.product-image {
+  border: 4pt solid black;
+  margin: 0;
 }
 
+.products {
+  padding-top: 3rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.glasses .product-image img {
+  padding-top: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 4rem;
+}
+
+.product p {
+  text-align: center;
+  margin: 0 auto;
+  padding: 0.5rem 0.5rem;
+  color: white;
+  background-color: black;
+}
