--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -116,3 +116,31 @@ header div {
   color: white;
   background-color: black;
 }
+
+.LocationHours {
+	padding-top: 3rem;
+	display: flex;
+	justify-content: space-between;
+}
+
+.TextLocation, .TextHours {
+	width: 19rem;
+	margin: 3 auto;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+	padding-left: 2rem;
+	color: white;
+	background-color: black;
+}
+
+.TextInfo {
+	margin-top: 1rem;
+	margin-bottom: 4rem;
+}
+
+footer {
+	padding: 5rem 0 5rem 5rem;
+	text-align: left;
+	background-color: black;
+	color: white;
+}
