--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -61,11 +61,15 @@ header div {
 }
 
 .banner {
+
   padding: 3rem 4rem;
   background-color: black;
   width: 20rem;
 }
 
+.mobileMenu {
+	display: none;
+}
 .menu {
   background-color: firebrick;
   padding-top: 0.75rem;
@@ -143,4 +147,68 @@ footer {
 	text-align: left;
 	background-color: black;
 	color: white;
+}
+
+@media only screen and (max-width: 1024px), (max-device-width:1024) {
+
+.menuItems {
+	display: none;
+
+}
+.mobileMenu {
+	color: white;
+		display: flex;
+	justify-content: center;
+}
+.glasses {
+	display: none;
+}
+.pen, .watch {
+	width: 40%;
+	text-align: center;
+}
+
+
+
+}
+@media only screen and (max-width: 470px), (max-device-width:470px) {
+
+	.banner h4 {
+		font-size: 0.77rem;
+		font-family: Helvetica;
+		font-weight: bold;
+	}
+	.banner h1 {
+		font-size: 1rem;
+		font-weight: bold;
+		font-family: Helvetica;
+	}
+	.banner {
+		margin-top: 8rem;
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+		padding-left: 2rem;
+	}
+
+	.FrontPage {
+		height: 15rem;
+	}
+
+	.pen {
+		display: none
+	}
+
+	.watch {
+		width: 80%;
+	}
+
+	.container-size {
+  max-width: 470px;
+  margin: 0 auto;
+}
+
+.LocationHours {
+	flex-direction: column;
+	justify-content: center;
+}
 }
